Implement code changes to enhance functionality and improve performance

--- a/mr-manager/app.json
+++ b/mr-manager/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "John_Kech",
+    "name": "mr-manager",
     "slug": "mr-manager",
     "version": "1.0.0",
     "orientation": "portrait",
